--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,14 +1,17 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Items</h1>
-
-<table>
+<div class="panel panel-default">
+  <!-- Default panel contents -->
+  <div class="panel-heading">Panel heading</div>
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
       <th>Description</th>
       <th>Price</th>
       <th>Stock</th>
+      <th>Category</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +23,7 @@
         <td><%= item.description %></td>
         <td><%= item.price %></td>
         <td><%= item.stock %></td>
+        <td><%= !item.category.nil? ? item.category.name : "No Category" %></td>
         <td><%= link_to 'Show', item %></td>
         <td><%= link_to 'Edit', edit_item_path(item) %></td>
         <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -27,7 +31,7 @@
     <% end %>
   </tbody>
 </table>
-
+</div>
 <br>
 
 <%= link_to 'New Item', new_item_path %>
