--- a/app/views/items/welcome.html.erb
+++ b/app/views/items/welcome.html.erb
@@ -1,23 +1,43 @@
-<p id="notice"><%= notice %></p>
+<h1>WELCOME!! </h1>
+<div class="row">
+    <div class="col-md-3">Categories> 
+    
+    <table>
+      <tr>
+        <th><hh>
+        </tr>
 
-<h1>WELCOME</h1>
-
-<% if !user_signed_in? %>
-   <%= link_to('Register', new_user_session_path) %>
-   <% end %> 
+        <% @categories.each do |category| %>
+        <tr>
+          <td><%= category.name %></td>
+          </tr>
+            <% end %>
+            </tbody>
+</table>
+</div>
+    <div class="col-md-9">
+  <% if !user_signed_in? %>
+<%= link_to('register', new_user_session_path)  %>
+<%end%>
 
 <table>
   <thead>
     <tr>
+      
     </tr>
   </thead>
 
   <tbody>
     <% @items.each do |item| %>
       <tr>
-        <td><%= link_to item.name + " (" + number_to_currency(item.price) + ")", item %></td>
-       
+        <td><%= link_to item.title + " ( " + number_to_currency(item.price) + ")" , item %></td>
+        
       </tr>
     <% end %>
   </tbody>
 </table>
+</div> 
+</div> 
+<br>
+
+<%= link_to 'New Item', new_item_path %>
